--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
 		<link rel="stylesheet" href="css/estilos.css">
 	</head>
 	<body>
+		<main>
+			<header>
+				<img src="https://source.unsplash.com/100x100/?soccer" alt="">	
+				<ul>
+					<li>Grêmio</li>
+					<li>Inter</li>
+					<li>Brasil-Pel</li>
+				</ul>	
+			</header>
+			<section>
+				
+			</section>
+			<footer>
+				
+			</footer>
+		</main>
 		
 	</body>
 </html>
