section finalizada, trabalhando no footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<main>
-			<header>
+			<header id="alinhando-header">
 				<img src="https://source.unsplash.com/100x100/?soccer" alt="">	
 				<ul>
 					<li>Grêmio</li>
@@ -16,10 +16,16 @@
 				</ul>	
 			</header>
 			<section>
+				<article>
+					<header>
+						<h3>Sobre Nós</h3>
+					</header>
+					<p>Esta é uma empresa sobre programação fácil, aqui um programador faz o que quer, se quiser nem trabalha. <br>Aqui na empresa voçê também define seu salário, pagamos 13º, 14º, 15º, esta bem parecido com o senado e o congresso.</p>
+				</article>
 				
 			</section>
 			<footer>
-				
+				<p>Para mais informações acesse <a href=""></a>aqui</p>
 			</footer>
 		</main>
 		
